<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/joker"
    android:id="@+id/container"
    tools:context=".ui.detail.MovieDetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/dtl_fragment_main_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/topBackButton"
                android:layout_width="46dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                app:backgroundTint="@android:color/transparent"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:icon="@drawable/ic_arrow_back"
                app:iconTint="#d6d8d9"
                app:iconSize="32dp"
                app:cornerRadius="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="220dp"
                android:layout_marginEnd="15dp"
                android:text="@string/mv_title"
                android:textAlignment="center"
                android:textColor="#7FB6E4FD"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RatingBar
                android:id="@+id/mvRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="4.5"
                android:numStars="5"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:theme="@style/RatingBar"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@+id/mvTitle"
                app:layout_constraintStart_toStartOf="@+id/mvTitle"
                app:layout_constraintTop_toBottomOf="@+id/mvTitle" />

            <TextView
                android:id="@+id/mvDuDateType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/du_date_type"
                android:textColor="#92bdd0"
                android:textSize="15sp"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="@+id/mvRate"
                app:layout_constraintStart_toStartOf="@+id/mvRate"
                app:layout_constraintTop_toBottomOf="@+id/mvRate" />

            <TextView
                android:id="@+id/storyLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storyline"
                android:textAlignment="center"
                android:textColor="#CCFCFEFF"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_marginTop="26dp"
                app:layout_constraintEnd_toEndOf="@+id/mvDuDateType"
                app:layout_constraintStart_toStartOf="@+id/mvDuDateType"
                app:layout_constraintTop_toBottomOf="@+id/mvDuDateType" />

            <TextView
                android:id="@+id/mvOverView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_text"
                android:textAlignment="center"
                android:textColor="#CCFCFEFF"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/storyLine"
                app:layout_constraintTop_toBottomOf="@+id/storyLine"
                app:layout_constraintEnd_toEndOf="@+id/storyLine"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/goBackHomeBtn"
                android:layout_width="260dp"
                android:layout_height="60dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:layout_marginTop="35dp"
                android:text="@string/go_to_home"
                android:textAllCaps="false"
                android:textColor="#232015"
                android:textSize="26sp"
                android:textStyle="bold"
                app:backgroundTint="#feb800"
                app:cornerRadius="8dp"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="32dp"
                app:iconTint="#d6d8d9"
                app:layout_constraintEnd_toEndOf="@+id/mvOverView"
                app:layout_constraintStart_toStartOf="@+id/mvOverView"
                app:layout_constraintTop_toBottomOf="@+id/mvOverView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>