<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="#21242c">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/popularMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular_movies"
            android:textColor="#b7e1f2"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/viewAllPopularMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textColor="#a6a7ae"
            android:textSize="18sp"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/popularMovies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/popularMovies" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popularMovieRecView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popularMovies" />

        <TextView
            android:id="@+id/topRatedMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_movies"
            android:textColor="#b7e1f2"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="@+id/popularMovieRecView"
            app:layout_constraintTop_toBottomOf="@+id/popularMovieRecView" />

        <TextView
            android:id="@+id/viewAllTopRatedMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textColor="#a6a7ae"
            android:textSize="18sp"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/topRatedMovies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/topRatedMovies" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/topRatedMovieRecView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topRatedMovies" />

        <TextView
            android:id="@+id/nowPlayingMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_playing"
            android:textColor="#b7e1f2"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topRatedMovieRecView" />

        <TextView
            android:id="@+id/viewAllNowPlayingMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textColor="#a6a7ae"
            android:textSize="18sp"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/nowPlayingMovies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nowPlayingMovies" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/nowPlayingMovieRecView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nowPlayingMovies" />

        <TextView
            android:id="@+id/upcomingMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_movies"
            android:textColor="#b7e1f2"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nowPlayingMovieRecView" />

        <TextView
            android:id="@+id/viewAllUpcomingMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textColor="#a6a7ae"
            android:textSize="18sp"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/upcomingMovies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/upcomingMovies" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcomingMovieRecView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/upcomingMovies"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>